# rtic-tests

pico-demo/: Cargo.toml  rust-toolchain.toml
pico-demo/.cargo/: config.toml
pico-demo/src/: main.rs
