[package]
name = "pico-rtic-demo"
categories = ["embedded", "no-std"]
description = "Example task local initialized resources for Raspberry Pi Pico"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
rtic = { version = "2.0.0", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "1.0.0", features = ["rp2040"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3"
rp-pico = "0.7.0"
#rp2040-boot2 = { version = "0.3.0" }
#rp2040-monotonic = "1.3"
panic-probe = { version = "0.3" }
defmt = "0.3"
defmt-rtt = "0.4"

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimzations
